# 842B-compress

./: .gitignore  CMakeLists.txt  README.md
common/: 842defs.h  CompressorConfig.h
compressor/: 842defs.h  CMakeLists.txt  Compressor.cpp  Compressor.h  CompressorConfig.cpp  CompressorConfig.h  HashManager.cpp  HashManager.h  crc32.h  crc32table.h  main.cpp
decompressor/: CMakeLists.txt  Decompressor.cpp  Decompressor.h  main.cpp
test/: CMakeLists.txt  CompDecompTest.cpp
